popups created, functional - kinda

--- a/src/app/welcome-page-component/welcome-page-component.component.html
+++ b/src/app/welcome-page-component/welcome-page-component.component.html
@@ -16,8 +16,8 @@
         <ng-container *ngIf="walletService.isConnected()">
           <p>Connected: {{ walletService.shortAddress() }}</p>
           <div class="button-section">
-            <button class="create-button">Create a Quiz</button>
-            <button class="join-button">Join a Quiz</button>
+            <button class="create-button" (click)="openCreateQuizDialog()">Create a Quiz</button>
+            <button class="join-button" (click)="joinQuizDialog()">Join a Quiz</button>
           </div>
         </ng-container>
       </div>
