question  creation almost done

--- a/src/app/create-questions-component/create-questions-component.component.html
+++ b/src/app/create-questions-component/create-questions-component.component.html
@@ -3,50 +3,88 @@
   <span class="question-count">Questions: {{ numberOfQuestions }}</span>
 </div>
 
-<form [formGroup]="quizForm" (ngSubmit)="onSubmit()" class="quiz-form">
-  <div formArrayName="questions" class="questions-container">
-    <div *ngFor="let questionForm of getQuestionsFormArray().controls; let i = index" 
-         [formGroupName]="i" 
-         class="question-card">
-      <h2>Question {{ i + 1 }}</h2>
-      
-      <mat-form-field class="question-input">
-        <mat-label>Enter your question</mat-label>
-        <input matInput formControlName="question" placeholder="Type your question here">
-      </mat-form-field>
+<form (ngSubmit)="onSubmit()" class="quiz-form">
+  <div class="questions-container">
+    <div *ngFor="let questionForm of questionForms; let i = index" class="question-card">
+      <div style="display: flex; flex-direction: column; width: 100%;">
+        <h2>Question {{ i + 1 }}</h2>
 
-      <div formArrayName="answers" class="answers-container">
-        <div *ngFor="let answer of getAnswersFormArray(i).controls; let j = index" 
-             class="answer-input">
-          <mat-form-field>
-            <mat-label>Answer {{ ['A', 'B', 'C', 'D'][j] }}</mat-label>
-            <input matInput [formControlName]="j" 
-                   [placeholder]="'Enter answer ' + ['A', 'B', 'C', 'D'][j]"
-                   (input)="onAnswerInput(i, j)">
-          </mat-form-field>
-          
-          <mat-radio-button [value]="j" 
-                           formControlName="correctAnswer"
-                           [disabled]="!hasAnswer(i, j)">
-            Correct Answer
-          </mat-radio-button>
+        <input [(ngModel)]="questionForm.question" 
+               [name]="'question' + i"
+               placeholder="Type your question here">
+        
+        <div class="answers-container">
+          <div class="answer-input">
+            <input [(ngModel)]="questionForm.answers[0]"
+                   [name]="'answer' + i + '-' + 0"
+                   [placeholder]="'Enter answer ' + ['A', 'B', 'C', 'D'][1]"
+                   (input)="onAnswerInput(i, 0)">
+            <mat-radio-group [(ngModel)]="questionForm.correctAnswer"
+                             [name]="'correctAnswer' + i">
+              <mat-radio-button [value]="0" 
+                               [disabled]="!hasAnswer(i, 0)">
+                Correct Answer
+              </mat-radio-button>
+            </mat-radio-group>
+          </div>
+
+          <div class="answer-input">
+            <input [(ngModel)]="questionForm.answers[1]"
+                   [name]="'answer' + i + '-' + 1"
+                   [placeholder]="'Enter answer ' + ['A', 'B', 'C', 'D'][1]"
+                   (input)="onAnswerInput(i, 1)">
+            <mat-radio-group [(ngModel)]="questionForm.correctAnswer"
+                             [name]="'correctAnswer' + i">
+              <mat-radio-button [value]="1" 
+                               [disabled]="!hasAnswer(i, 1)">
+                Correct Answer
+              </mat-radio-button>
+            </mat-radio-group>
+          </div>
+
+          <div class="answer-input">
+            <input [(ngModel)]="questionForm.answers[2]"
+                   [name]="'answer' + i + '-' + 2"
+                   [placeholder]="'Enter answer ' + ['A', 'B', 'C', 'D'][2]"
+                   (input)="onAnswerInput(i, 2)">
+            <mat-radio-group [(ngModel)]="questionForm.correctAnswer"
+                             [name]="'correctAnswer' + i">
+              <mat-radio-button [value]="2" 
+                               [disabled]="!hasAnswer(i, 2)">
+                Correct Answer
+              </mat-radio-button>
+            </mat-radio-group>
+          </div>
+
+          <div class="answer-input">
+            <input [(ngModel)]="questionForm.answers[3]"
+                   [name]="'answer' + i + '-' + 3"
+                   [placeholder]="'Enter answer ' + ['A', 'B', 'C', 'D'][3]"
+                   (input)="onAnswerInput(i, 3)">
+            <mat-radio-group [(ngModel)]="questionForm.correctAnswer"
+                             [name]="'correctAnswer' + i">
+              <mat-radio-button [value]="3" 
+                               [disabled]="!hasAnswer(i, 3)">
+                Correct Answer
+              </mat-radio-button>
+            </mat-radio-group>
+          </div>
         </div>
-      </div>
 
-      <div class="question-actions">
-        <button mat-raised-button 
-                [color]="isQuestionSaved(i) ? 'accent' : 'primary'" 
-                type="button" 
-                (click)="saveQuestion(i)"
-                class="save-question-button">
-          {{ isQuestionSaved(i) ? 'Update Question' : 'Save Question' }}
-        </button>
+        <div class="question-actions">
+          <button mat-raised-button 
+                  [color]="isQuestionSaved(i) ? 'accent' : 'primary'" 
+                  type="button" 
+                  (click)="saveQuestion(i)"
+                  class="save-question-button">
+            {{ isQuestionSaved(i) ? 'Update Question' : 'Save Question' }}
+          </button>
+        </div>
       </div>
     </div>
   </div>
 
   <button mat-raised-button color="primary" type="submit" class="submit-button">
     Deploy Quiz
-    <!-- here it need to call smart contract function -->
   </button>
 </form>
