--- a/src/app/live-quiz/live-quiz.component.html
+++ b/src/app/live-quiz/live-quiz.component.html
@@ -5,20 +5,20 @@
       <mat-card-subtitle>Question {{ currentQuestionIndex + 1 }} of {{ questions.length }}</mat-card-subtitle>
     </mat-card-header>
 
-    <mat-card-content *ngIf="questions[currentQuestionIndex]">
+    <mat-card-content *ngIf="currentQuestion">
       <div class="question-timer">
         <div class="timer-bar"></div>
       </div>
 
       <div class="question-content">
-        <h2>{{ questions[currentQuestionIndex].question }}</h2>
+        <h2>{{ currentQuestion.question }}</h2>
         
         <mat-radio-group 
           [(ngModel)]="selectedAnswer" 
           class="answer-options"
           [disabled]="isCreator">
           <mat-radio-button 
-            *ngFor="let answer of questions[currentQuestionIndex].answers; let i = index" 
+            *ngFor="let answer of currentQuestion.answers; let i = index" 
             [value]="i"
             class="answer-option">
             {{ answer }}
