--- a/src/app/pages/welcome-page-component/welcome-page-component.component.scss
+++ b/src/app/pages/welcome-page-component/welcome-page-component.component.scss
@@ -6,29 +6,36 @@
     align-items: center;
 }
 
-.welcome-page-container{
+.welcome-page-container {
     width: 80%;
-    border-radius: 20px;
     padding: 20px;
-    background: linear-gradient(45deg, 
-        #00efff, 
-        #ff4992, 
-        #00efff, 
-        #ff4992, 
-        #00efff);
-    background-size: 300% 300%;
-    animation: gradientAnimation 20s ease infinite;
-    border: 5px solid rgba(255, 255, 255, 0.8);
+    background-color: #262C3A;
+    border-radius: 20px;
     color: white;
-    box-shadow: 0 0px 50px 0px rgba(255, 255, 255, 0.8);
+    box-shadow: 0 0px 50px 0px rgba(38, 44, 58, 0.8);
+    position: relative;
 }
 
-@keyframes gradientAnimation {
-    0% { background-position: 0% 50%; }
-    50% { background-position: 100% 50%; }
-    100% { background-position: 0% 50%; }
+.welcome-page-container::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    border-radius: 20px;
+    padding: 5px; /* This creates the border width */
+    background: linear-gradient(to right, #d43bd4, #3071ab, #00e8b5);
+    -webkit-mask: 
+        linear-gradient(#fff 0 0) content-box, 
+        linear-gradient(#fff 0 0);
+    -webkit-mask-composite: xor;
+    mask: 
+        linear-gradient(#fff 0 0) content-box, 
+        linear-gradient(#fff 0 0);
+    mask-composite: exclude;
+    pointer-events: none;
 }
-
 .container-wrapper{
     height: 70vh;
     display: flex;
@@ -36,6 +43,7 @@
     justify-content: space-evenly;
     align-items: center;
     text-align: center;
+    text-shadow: 4px 4px 4px rgb(0, 0, 0);
 }
 
 .button-section{
@@ -49,8 +57,17 @@
         width: 40%;
         height: 60%;
         border-radius: 20px;
-        border-color: #ffffff;
         font-size: 16px;
         padding: 0;
+        background: linear-gradient(to right, #d43bd4, #3071ab, #00e8b5);
+        color: white;
+        font-weight: 600;
+        border: none;
+        transition: transform 0.2s, box-shadow 0.2s;
+        
+        &:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
     }
 }
