--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,8 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
+
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap');
 
 html {
   @include mat.theme((
@@ -10,7 +11,7 @@ html {
       primary: mat.$azure-palette,
       tertiary: mat.$blue-palette,
     ),
-    typography: Roboto,
+    typography: "Space Grotesk",
     density: 0,
   ));
 }/* You can add global styles to this file, and also import other style files */
@@ -23,27 +24,12 @@ html{
 
 body{
     margin: 0;
-    font-family: Arial, sans-serif;
+    font-family: "Space Grotesk", Helvetica, Arial, sans-serif;
     font-size: 20px;
     font-weight: 600;
     line-height: 30px;
     word-spacing: 0px; 
-    
-    background: linear-gradient(45deg, 
-        #00efff, 
-        #ffffff,
-        #ff4992, 
-        #00efff, 
-        #ff4992, 
-        #00efff);
-    background-size: 300% 300%;
-    animation: gradientAnimation 10s ease infinite;
-}
-
-@keyframes gradientAnimation {
-    0% { background-position: 0% 50%; }
-    50% { background-position: 100% 50%; }
-    100% { background-position: 0% 50%; }
+    background: linear-gradient(45deg, #d43bd4, #3071ab, #00e8b5);
 }
 
 .container {
@@ -81,5 +67,3 @@ body{
         max-width: 90%;
     }
 }
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
