new socket service, a lot of small changes

--- a/src/app/pages/live-quiz/live-quiz.component.html
+++ b/src/app/pages/live-quiz/live-quiz.component.html
@@ -42,7 +42,7 @@
         mat-raised-button 
         color="primary"
         (click)="submitAllUsersAnswers()"
-        [disabled]="isCreator">
+        [disabled]="!isCreator">
         Submit All Answers
       </button>
 
