--- a/src/app/pages/leaderboard-page/leaderboard-page.component.html
+++ b/src/app/pages/leaderboard-page/leaderboard-page.component.html
@@ -14,11 +14,16 @@
           <div class="player-name">Player</div>
           <div class="score">Score</div>
         </div>
+
+        <div class="player-item">
+          <div class="player-name">{{ winner.winnerAddress }}</div>
+          <div class="score">{{ winner.winnerScore }}</div>
+        </div>
         
         <div *ngFor="let player of players; let i = index" class="player-item">
-          <div class="rank">{{ i + 1 }}</div>
+          <!-- <div class="rank">{{ i + 1 }}</div> -->
           <div class="player-name">{{ player }}</div>
-          <div class="score">23</div>
+          <!-- <div class="score">23</div> -->
         </div>
       </div>
 
