--- a/src/app/pages/live-quiz/live-quiz.component.html
+++ b/src/app/pages/live-quiz/live-quiz.component.html
@@ -33,7 +33,7 @@
         mat-raised-button 
         color="primary"
         (click)="submitAnswer()"
-        [disabled]="selectedAnswer === null || isCreator">
+        [disabled]="selectedAnswer === null || isCreator || isFinished">
         Submit Answer
       </button>
 
@@ -42,7 +42,7 @@
         mat-raised-button 
         color="primary"
         (click)="submitAllUsersAnswers()"
-        [disabled]="!isCreator">
+        [disabled]="!isCreator || canEndQuiz">
         Submit All Answers
       </button>
 
