--- a/src/app/pages/leaderboard-page/leaderboard-page.component.html
+++ b/src/app/pages/leaderboard-page/leaderboard-page.component.html
@@ -1,12 +1,15 @@
 <div class="leaderboard-header">
-  <h1>Leaderboard</h1>
-  <span class="subtitle">Top Quiz Players</span>
+  <div class="header-content">
+    <h1>Leaderboard</h1>
+    <span class="subtitle">Top Quiz Players</span>
+  </div>
+  <button class="exit-btn" routerLink="/" (click)="exit()">Exit</button>
 </div>
 
 <div class="leaderboard-container">
   <div class="leaderboard-card">
     <div class="leaderboard-content">
-      <h2>Player Rankings</h2>
+      <h2>Leaderboard</h2>
       
       <div class="player-list">
         <div class="player-header">
@@ -15,15 +18,10 @@
           <div class="score">Score</div>
         </div>
 
-        <div class="player-item">
-          <div class="player-name">{{ winner.winnerAddress }}</div>
-          <div class="score">{{ winner.winnerScore }}</div>
-        </div>
-        
-        <div *ngFor="let player of players; let i = index" class="player-item">
-          <!-- <div class="rank">{{ i + 1 }}</div> -->
-          <div class="player-name">{{ player }}</div>
-          <!-- <div class="score">23</div> -->
+        <div *ngFor="let player of players; let i = index" class="player-item" [class.winner-row]="i === 0">
+          <div class="rank">{{ i + 1 }}</div>
+          <div class="player-name">{{ shortenAddress(player.userAddress) }} <span *ngIf="player.userAddress === walletService.address()" style="color: #3071ab; font-weight: 12px;">(You)</span></div>
+          <div class="score">{{ player.score }}</div>
         </div>
       </div>
 
