--- a/src/app/pages/quiz-queue/quiz-queue.component.html
+++ b/src/app/pages/quiz-queue/quiz-queue.component.html
@@ -22,8 +22,10 @@
       <div class="players-list">
         <div *ngFor="let player of players()" class="player-item">
           {{ player }}
+          <span *ngIf="player === creatorAddress()" style="color: #d43bd4; font-weight: 12px;">(Creator)</span>
+          <span *ngIf="player === this.walletService.address()" style="color: #3071ab; font-weight: 12px;">(You)</span>
         </div>
-        <div *ngIf="players.length === 0" class="no-players">
+        <div *ngIf="players().length === 0" class="no-players">
           Waiting for players to join...
         </div>
       </div>
