--- a/src/app/pages/quiz-queue/quiz-queue.component.scss
+++ b/src/app/pages/quiz-queue/quiz-queue.component.scss
@@ -73,6 +73,7 @@
       font-weight: 500;
       display: inline-block;
       max-width: 100%;
+      line-height: 15px;
     }
   }
 
@@ -121,6 +122,7 @@
     overflow-wrap: break-word;
     font-family: monospace;
     font-size: 14px;
+    line-height: 15px;
     
     &:hover {
       background: rgba(255, 255, 255, 0.15);
