--- a/src/app/pages/welcome-page-component/welcome-page-component.component.scss
+++ b/src/app/pages/welcome-page-component/welcome-page-component.component.scss
@@ -47,15 +47,22 @@
 }
 
 .button-section{
-    height: 60px;
+    height: 100px;
     width: 100%;
     display: flex;
-    justify-content: space-evenly;
+    flex-direction: column;
     align-items: center;
+    gap: 10px;
 
-    .create-button, .join-button, .connect-button{
-        width: 40%;
-        height: 60%;
+    .button-container{
+        display: flex;
+        justify-content: space-evenly;
+        width: 100%;
+        height: 40px;
+    }
+
+    .create-button, .join-button, .connect-button, .search-button{
+        width: 35%;       
         border-radius: 8px;
         font-size: 16px;
         padding: 0;
