--- a/src/app/pages/welcome-page-component/welcome-page-component.component.html
+++ b/src/app/pages/welcome-page-component/welcome-page-component.component.html
@@ -7,9 +7,11 @@
         <ng-container *ngIf="!walletService.isConnected()">
           <p>Connect wallet to continue</p>
           <div class="button-section">
-            <button class="connect-button" (click)="connectWallet()">
-              <span>{{ walletService.isConnecting() ? 'Connecting...' : 'Connect Wallet' }}</span>
-            </button>
+            <div class="button-container">
+                <button class="connect-button" (click)="connectWallet()">
+                  <span>{{ walletService.isConnecting() ? 'Connecting...' : 'Connect Wallet' }}</span>
+                </button>
+            </div>
           </div>
         </ng-container>
 
