feat: add detailed results button with gradient styling to leaderboard page

--- a/src/app/pages/leaderboard-page/leaderboard-page.component.html
+++ b/src/app/pages/leaderboard-page/leaderboard-page.component.html
@@ -28,3 +28,15 @@
     </div>
   </div>
 </div>
+
+<!-- More Info Section at bottom -->
+<div class="more-info-section">
+  <p class="info-text">For more detailed information about this quiz and individual player results</p>
+  <button mat-raised-button 
+          color="primary" 
+          routerLink="/search-results"
+          class="more-info-btn">
+    <mat-icon>search</mat-icon>
+    View Detailed Results
+  </button>
+</div>
