feat: add exit handler to leaderboard search results button

--- a/src/app/pages/leaderboard-page/leaderboard-page.component.html
+++ b/src/app/pages/leaderboard-page/leaderboard-page.component.html
@@ -35,7 +35,8 @@
   <button mat-raised-button 
           color="primary" 
           routerLink="/search-results"
-          class="more-info-btn">
+          class="more-info-btn"
+          (click)="exit()">
     <mat-icon>search</mat-icon>
     View Detailed Results
   </button>
